# acs-jepa

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
acs-jepa-cli/: README.md  pyproject.toml
acs-jepa-cli/configs/: default.yaml
acs-jepa-cli/configs/defaults_components/: latent_conditional_sampler_detach-false_goalw-0p5.yaml  latent_conditional_sampler_detach-false_goalw-0p9.yaml  latent_gmm_detach-false_goalw-0p1.yaml  latent_gmm_detach-false_goalw-0p5.yaml  latent_gmm_detach-false_goalw-0p9.yaml  latent_gmm_detach-true_goalw-0p1.yaml  latent_predicate_detach-true_goalw-0p5.yaml  latent_predicate_detach-true_goalw-0p9.yaml
acs-jepa-cli/configs/tuning/00_calibration/: batch16.yaml  batch8.yaml
acs-jepa-cli/configs/tuning/01_composition/: backbone_pooled_mlp.yaml  backbone_rnn_gru.yaml  gmm_detach_true.yaml  goal_conditional_sampler.yaml
acs-jepa-cli/configs/tuning/02_capacity/: size128_layers2.yaml  size128_layers3.yaml  size48_layers3.yaml  (+3 more)
acs-jepa-cli/src/acs_jepa_cli/: __init__.py  cli.py  config.py  data.py  modeling.py  scheduling.py  tracking.py
acs-jepa-cli/tests/: test_action_applicability_labels.py  test_action_applicability_recoverability.py  test_action_applicability_table_script.py  test_action_auxiliary_smoke_config.py  test_action_diag_common.py  test_action_latent_statistics.py  test_action_negative_sampling.py  test_action_phase0_common.py  test_action_schema_residuals.py  test_action_supervised_probes.py  test_action_supervision_data.py  test_assess_action_latent_phase2.py  test_cli.py  test_modeling.py
(+123 files in other folders)
